// Adwarden MVP - DBML for dbdiagram.io
// Paste at https://dbdiagram.io/d

Project Adwarden {
  database_type: 'PostgreSQL'
  Note: 'Campaign-centric ad/notification delivery. enduser_events = one row per serve. Admin list APIs and UIs may attach linkedCampaignCount to ads, notifications, and redirects (derived: count campaigns by ad_id, notification_id, redirect_id; not stored columns).'
}

// ============ Enums ============
Enum user_role {
  user
  admin
}

Enum campaign_type {
  ads
  popup
  notification
}

Enum frequency_type {
  full_day
  time_based
  only_once
  always
  specific_count
}

Enum target_audience {
  new_users
  all_users
}

Enum campaign_status {
  active
  inactive
  scheduled
  expired
}

Enum enduser_event_type {
  ad
  notification
  popup
  request
}

// ============ Auth ============
Table user {
  id varchar(255) [pk]
  name varchar(255)
  email varchar(255) [not null, unique]
  email_verified boolean [not null, default: false]
  image varchar(255)
  banned boolean [not null, default: false]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  role user_role [not null, default: 'user']
}

Table session {
  id varchar(255) [pk]
  user_id varchar(255) [not null]
  token varchar(255) [not null, unique]
  expires_at timestamp [not null]
  ip_address varchar(255)
  user_agent varchar(255)
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table account {
  id varchar(255) [pk]
  user_id varchar(255) [not null]
  account_id varchar(255) [not null]
  provider_id varchar(255) [not null]
  access_token text
  refresh_token text
  access_token_expires_at timestamp
  refresh_token_expires_at timestamp
  scope varchar(255)
  id_token text
  password varchar(255)
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table verification {
  id varchar(255) [pk]
  identifier varchar(255) [not null]
  value varchar(255) [not null]
  expires_at timestamp [not null]
  created_at timestamp [not null]
}

// ============ Content ============
Table platforms {
  id uuid [pk]
  name varchar(255) [not null]
  domain varchar(255) [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table ads {
  id uuid [pk]
  name varchar(255) [not null]
  description text
  image_url text
  target_url text
  html_code text
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table notifications {
  id uuid [pk]
  title varchar(255) [not null]
  message text [not null]
  cta_link text
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table notification_reads {
  id uuid [pk]
  notification_id uuid [not null]
  enduser_id varchar(255) [not null]
  read_at timestamp [not null]
  Index unique_notification_enduser (notification_id, enduser_id) [unique]
}

// ============ Campaigns ============
Table campaigns {
  id uuid [pk]
  name varchar(255) [not null]
  target_audience target_audience [not null, default: 'all_users']
  campaign_type campaign_type [not null]
  frequency_type frequency_type [not null]
  frequency_count integer
  time_start time
  time_end time
  status campaign_status [not null, default: 'inactive']
  start_date timestamp
  end_date timestamp
  ad_id uuid [ref: > ads.id, note: 'Nullable; set for ads/popup campaigns']
  notification_id uuid [ref: > notifications.id, note: 'Nullable; set for notification campaigns']
  redirect_id uuid [note: 'Nullable; set for redirect campaigns; ref redirects.id when table present']
  platform_ids uuid[] [not null, note: 'Target platforms; empty with notification = global (all domains)']
  country_codes varchar(2)[] [not null, note: 'Geo targeting; empty = all countries']
  created_by varchar(255) [not null, default: 'SYSTEM', note: 'Reverts to SYSTEM user when creator deleted']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

// ============ Extension end-user events ============
Enum enduser_user_plan {
  trial
  paid
}

Table enduser_events {
  id uuid [pk]
  enduser_id varchar(255) [not null]
  email varchar(255)
  plan enduser_user_plan
  campaign_id uuid
  domain varchar(255)
  type enduser_event_type [not null]
  country varchar(2)
  status_code int
  user_agent text
  created_at timestamp [not null]
  Note: 'Event-based: one row per serve or request'
}

// ============ Relationships ============
Ref: session.user_id > user.id
Ref: account.user_id > user.id
Ref: campaigns.created_by > user.id

Ref: notification_reads.notification_id > notifications.id

Ref: campaigns.ad_id > ads.id
Ref: campaigns.notification_id > notifications.id

Ref: enduser_events.campaign_id > campaigns.id
